# colombia-rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  body.json  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  chat.py  health.py
app/config/: logging.py  settings.py
app/core/: exceptions.py
app/models/: __init__.py  documents.py  embeddings.py  requests.py  responses.py
app/services/: __init__.py  chunking_service.py  data_extractor.py  embedding_service.py  response_generation_service.py  retrieval_service.py  text_processor.py  vector_store_service.py
app/utils/: __init__.py  validators.py
data/: README.md  sample_chunks.json  sample_embeddings.json  simple_pipeline_demonstration.json
data/raw/: wikipedia_cache_3dd06b3034e3c4123848e1bd1419b5cf.html
data/vectorstore/6676af3a-6f39-4249-b581-0f2f9335e2fb/: index_metadata.pickle
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: debug_extractor.py  debug_processor.py  debug_types.py  debug_validate_function.py  debug_validation.py  demonstrate_pipeline.py  find_correct_div.py  ingest_colombia_wiki.py  ingest_one_wiki.py  seed_colombia_titles.txt  test_embeddings.py  test_phase2_pipeline.py  test_rag.py  test_retrieval.py  test_vector_store.py  verify_setup.py  verify_system.py
tests/e2e/: test_pipeline_colombia.py
tests/integration/test_rag/: test_rag_pipeline.py
tests/unit/test_services/: test_embeddings.py  test_response_generation.py  test_retrieval.py  test_vector_store.py
